--- a/zh-CN/700.reference/1100.performance-test/400.sysbench-benchmark-report-of-oceanbase-database.md
+++ b/zh-CN/700.reference/1100.performance-test/400.sysbench-benchmark-report-of-oceanbase-database.md
@@ -3,29 +3,29 @@
 ## 测试环境 (阿里云 ECS)
 
 * 硬件配置  
-  
-| 服务类型 | ECS 类型 | 实例数 | 机器核心数 | 内存 |
-| --- | --- | --- | --- | --- |
-| OceanBase 数据库 | ecs.g7.8xlarge | 3 | 32C | 128G |
-| Sysbench | ecs.g7.8xlarge | 1 | 32C | 128G |
-| ODP | ecs.c7.16xlarge | 1 | 64C | 128G |
+
+    | 服务类型 | ECS 类型 | 实例数 | 机器核心数 | 内存 |
+    | --- | --- | --- | --- | --- |
+    | OceanBase 数据库 | ecs.g7.8xlarge | 3 | 32C | 128G <br>每台机器系统盘 300G，再挂载两块 400G 云盘作为 Clog 盘和 Data 盘，性能级别为 PL1|
+    | Sysbench | ecs.c7.4xlarge | 1 | 16c | 32g |
+    | ODP | ecs.c7.16xlarge | 1 | 64C | 128G |
 
 * 租户规格
 
-```sql
-CREATE RESOURCE UNIT sysbench_unit max_cpu 26, memory_size '70g'
-CREATE RESOURCE POOL sysbench_pool unit = 'sysbench_unit', unit_num = 1, zone_list=('zone1','zone2','zone3');
-CREATE TENANT sysbench_tenant resource_pool_list=('sysbench_pool'),  zone_list('zone1', 'zone2', 'zone3'), primary_zone=RANDOM, locality='F@zone1,F@zone2,F@zone3' set variables ob_compatibility_mode='mysql', ob_tcp_invited_nodes='%';
-```
+    ```sql
+    CREATE RESOURCE UNIT sysbench_unit max_cpu 26, memory_size '70g'
+    CREATE RESOURCE POOL sysbench_pool unit = 'sysbench_unit', unit_num = 1, zone_list=('zone1','zone2','zone3');
+    CREATE TENANT sysbench_tenant resource_pool_list=('sysbench_pool'),  zone_list('zone1', 'zone2', 'zone3'), primary_zone=RANDOM, locality='F@zone1,F@zone2,F@zone3' set variables ob_compatibility_mode='mysql', ob_tcp_invited_nodes='%';
+    ```
 
 * 软件版本  
 
-| 服务类型 | 软件版本 |
-| --- | --- |
-| OceanBase 数据库 | <ul><li>企业版：OceanBase 4.1.0.0</li><li>社区版：OceanBase_CE 4.1.0.0 </li></ul> |
-| ODP | OceanBase 4.1.0 |
-| Sysbench | 1.0.20 |
-| OS | CentOS Linux release 7.9.2009 (Core) |
+    | 服务类型 | 软件版本 |
+    | --- | --- |
+    | OceanBase 数据库 | <ul><li>企业版：OceanBase 4.2.0.0</li><li>社区版：OceanBase_CE 4.2.0.0 </li></ul> |
+    | ODP | OceanBase 4.2.0 |
+    | Sysbench | 1.0.20 |
+    | OS | CentOS Linux release 7.9.2009 (Core) |
 
 ## 测试方案
 
@@ -54,44 +54,44 @@ CREATE TENANT sysbench_tenant resource_pool_list=('sysbench_pool'),  zone_list('
 
 ### Point Select 性能
 
-| Threads | V4.1 QPS | V4.1 95% Latency (ms) |
+| Threads | V4.2 QPS | V4.2 95% Latency (ms) |
 | --- | --- | --- |
-| 32 | 135146.05 | 0.27 |
-| 64 | 252277.60 | 0.30 |
-| 128 | 431564.13 | 0.36 |
-| 256 | 686271.21 | 0.55 |
-| 512 | 937428.74 | 0.95 |
-| 1024 | 985232.01 | 2.35 |
+| 32 | 138746.60 | 0.26 |
+| 64 | 252231.37 | 0.29 |
+| 128 | 447755.19 | 0.34 |
+| 256 | 730315.66 | 0.48 |
+| 512 | 1009966.93 | 0.90 |
+| 1024 | 1012734.80 | 2.66 |
 
 ### Read Only 性能
 
-| Threads | V4.1 QPS | V4.1 95% Latency (ms) |
+| Threads | V4.2 QPS | V4.2 95% Latency (ms) |
 | --- | --- | --- |
-| 32 | 115232.45 | 4.74 |
-| 64 | 214733.98 | 5.18 |
-| 128 | 366616.03 | 6.09 |
-| 256 | 553922.27 | 8.74 |
-| 512 | 662368.79 | 15.83 |
-| 1024 | 653733.97 | 54.83 |
+| 32 | 121733.00 | 4.65 |
+| 64 | 221563.16 | 5.09 |
+| 128 | 392138.56 | 5.67 |
+| 256 | 577951.13 | 8.58 |
+| 512 | 763726.51 | 17.01 |
+| 1024 | 740835.95 | 38.94 |
 
 ### Write Only 性能
 
-| Threads | V4.1 QPS | V4.1 95% Latency (ms) |
+| Threads | V4.2 QPS | V4.2 95% Latency (ms) |
 | --- | --- | --- |
-| 32 | 36840.88 | 5.37 |
-| 64 | 62582.56 | 8.13 |
-| 128 | 107054.05 | 9.56 |
-| 256 | 155494.00 | 13.70 |
-| 512 | 242458.53 | 17.32 |
-| 1024 | 291343.40 | 31.94 |
+| 32 | 43984.28 | 7.17 |
+| 64 | 82554.92 | 6.55 |
+| 128 | 114874.89 | 10.09 |
+| 256 | 181982.10 | 12.52 |
+| 512 | 253635.91 | 19.29 |
+| 1024 | 292482.33 | 36.89 |
 
 ### Read Write 性能
 
-| Threads | V4.1 QPS | V4.1 95% Latency (ms) |
+| Threads | V4.2 QPS | V4.2 95% Latency (ms) |
 | --- | --- | --- |
-| 32 | 66669.18 | 11.45 |
-| 64 | 124559.80 | 12.52 |
-| 128 | 209150.84 | 15.27 |
-| 256 | 309329.85 | 20.00 |
-| 512 | 395940.95 | 33.12 |
-| 1024 | 454400.54 | 64.47 |
+| 32 | 72554.47 | 11.87 |
+| 64 | 139369.33 | 11.65 |
+| 128 | 247061.25 | 12.30 |
+| 256 | 313660.08 | 23.95 |
+| 512 | 497734.89 | 25.74 |
+| 1024 | 547816.87 | 54.83 |
