--- a/zh-CN/700.reference/1100.performance-test/600.tpc-c-benchmark-report-of-oceanbase-database.md
+++ b/zh-CN/700.reference/1100.performance-test/600.tpc-c-benchmark-report-of-oceanbase-database.md
@@ -4,28 +4,28 @@
 
 * 3 节点硬件配置  
 
-| 服务类型 | ECS 类型 | 实例数 | 机器核心数 | 内存 |
-| --- | --- | --- | --- | --- |
-| OceanBase 数据库 | ecs.g7.8xlarge | 3 | 32C | 128G |
-| ODP、Benchmark SQL | ecs.g7.8xlarge | 1 | 32C | 128G |
+    | 服务类型 | ECS 类型 | 实例数 | 机器核心数 | 内存 |
+    | --- | --- | --- | --- | --- |
+    | OceanBase 数据库 | ecs.g7.8xlarge | 3 | 32C | 128G <br>每台机器系统盘 300G，再挂载两块 400G 云盘作为 Clog 盘和 Data 盘，性能级别为 PL1|
+    | ODP、Benchmark SQL | ecs.c7.16xlarge | 1 | 64C | 128G |
 
 * 3 节点租户规格
 
-```sql
-CREATE RESOURCE UNIT tpcc_unit max_cpu 26, memory_size '70g'
-CREATE RESOURCE POOL tpcc_pool unit = 'tpcc_unit', unit_num = 1, zone_list=('zone1','zone2','zone3');
-CREATE TENANT tpcc_tenant resource_pool_list=('tpcc_pool'),  zone_list('zone1', 'zone2', 'zone3'), primary_zone=RANDOM, locality='F@zone1,F@zone2,F@zone3' set variables ob_compatibility_mode='mysql', ob_tcp_invited_nodes='%';
-```
+    ```sql
+    CREATE RESOURCE UNIT tpcc_unit max_cpu 26, memory_size '70g'
+    CREATE RESOURCE POOL tpcc_pool unit = 'tpcc_unit', unit_num = 1, zone_list=('zone1','zone2','zone3');
+    CREATE TENANT tpcc_tenant resource_pool_list=('tpcc_pool'),  zone_list('zone1', 'zone2', 'zone3'), primary_zone=RANDOM, locality='F@zone1,F@zone2,F@zone3' set variables ob_compatibility_mode='mysql', ob_tcp_invited_nodes='%';
+    ```
 
 * 软件版本
 
-| 服务类型 | 软件版本 |
-| --- | --- |
-| OceanBase 数据库 | <ul><li>企业版：OceanBase 4.1.0.0</li><li>社区版：OceanBase_CE 4.1.0.0 </li></ul> |
-| ODP | OceanBase 4.1.0 |
-| Benchmark SQL | Benchmark SQL V5.0 |
-| JDBC | mysql-connector-java-5.1.47 |
-| OS | CentOS Linux release 7.9.2009 (Core) |
+    | 服务类型 | 软件版本 |
+    | --- | --- |
+    | OceanBase 数据库 | <ul><li>企业版：OceanBase 4.2.0.0</li><li>社区版：OceanBase_CE 4.2.0.0 </li></ul> |
+    | ODP | OceanBase 4.2.0 |
+    | Benchmark SQL | Benchmark SQL V5.0 |
+    | JDBC | mysql-connector-java-5.1.47 |
+    | OS | CentOS Linux release 7.9.2009 (Core) |
 
 ## 测试方案
 
@@ -51,9 +51,9 @@ stockLevelWeight=4
 
 ## 测试结果
 
-* OceanBase 集群规模为 1：1：1 性能数据
+OceanBase 集群规模为 1：1：1 性能数据
 
 ```bash
-[Thread-704] INFO   jTPCC : Term-00, Measured tpmC (NewOrders) = 293350.85
-[Thread-704] INFO   jTPCC : Term-00, Measured tpmTOTAL = 652025.02
+[Thread-704] INFO   jTPCC : Term-00, Measured tpmC (NewOrders) = 289711.96
+[Thread-704] INFO   jTPCC : Term-00, Measured tpmTOTAL = 644025.66
 ```
