--- a/zh-CN/600.manage/900.performance-tuning/300.identify-bottlenecks-within-components/400.performance-bottlenecks-of-observer/300.hard-parsing.md
+++ b/zh-CN/600.manage/900.performance-tuning/300.identify-bottlenecks-within-components/400.performance-bottlenecks-of-observer/300.hard-parsing.md
@@ -6,7 +6,7 @@
 
 <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>关于 <code>V$OB_SQL_AUDIT</code> 的详细介绍，参见 <a href="../../../../700.reference/500.system-reference/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/3000.gv-sql_audit-of-oracle-mode.md">V$OB_SQL_AUDIT(Oracle 模式)</a> 和 <a href="../../../../700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/2200.gv-sql_audit-of-mysql-mode.md">V$OB_SQL_AUDIT(MySQL 模式)</a>。</p>
+    <p>关于 <code>V$OB_SQL_AUDIT</code> 的详细介绍，参见 <a href="../../../../700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/3000.gv-sql_audit-of-oracle-mode.md">V$OB_SQL_AUDIT(Oracle 模式)</a> 和 <a href="../../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/2200.gv-sql_audit-of-mysql-mode.md">V$OB_SQL_AUDIT(MySQL 模式)</a>。</p>
 </main>
 
 例如：
@@ -27,5 +27,5 @@
 
 ## 相关文档
 
-* [ob_plan_cache_percentage](../../../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/8600.ob_plan_cache_percentage-global.md)
+* [ob_plan_cache_percentage](../../../../700.reference/800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/8600.ob_plan_cache_percentage-global.md)
 * [修改租户系统变量](../../../200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md)
